# baseball-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  smithery.yaml
scripts/: baseball-mcp-dev.sh  setup.py
src/baseball_mcp/: __init__.py  __main__.py  cache.py  cli.py  http.py  resources.py  server.py
src/baseball_mcp/loaders/: __init__.py  games.py  players.py  statcast.py  teams.py
tests/: __init__.py  test_cache.py  test_integration.py  test_loader_players.py  test_loader_schedule.py  test_loader_statcast.py  test_loader_teams.py  test_resources.py  test_server.py
